<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        style="@style/heading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_item_title" />

    <TextView
        style="@style/heading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_item_name" />

    <EditText
        android:id="@+id/edittext_food_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_food_title_hint" />

    <TextView
        style="@style/heading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_item_desc" />

    <EditText
        android:id="@+id/edittext_food_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:digits="0123456789."
        android:hint="@string/edittext_food_desc_hint"
        android:inputType="numberDecimal" />

    <ImageView
        android:id="@+id/button_show_camera"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/picture_desc"
        android:src="@drawable/camera" />

    <ImageView
        android:id="@+id/imageview_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/picture_desc" />

</LinearLayout>